--- a/app/src/main/res/layout/canvas.xml
+++ b/app/src/main/res/layout/canvas.xml
@@ -1,65 +1,100 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:orientation="vertical" android:layout_width="600dp">
-
-    <TextView
+<!-- the outside container that holds everything inside allows us to place all thing relative to each other -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.samsung.pixelium.DrawingScreen">
+<!-- when this button is clicked a color palette will show up -->
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CANVAS"
-        android:id="@+id/title" />
-
+        android:id="@+id/color_palette"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:text="Palette"
+        android:onClick="changeColor"
+        android:clickable="true" />
+<!-- when this button is clicked Save method will be called and the canvas will be saved-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:id="@+id/save_button"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:onClick="saveIt"
+        android:text="SAVE" />
+    <!-- when this button is clicked a new canvas will appear, and also ask the "SAVE" option-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:id="@+id/newButton"
+        android:layout_toRightOf="@+id/save_button"
+        android:layout_toEndOf="@+id/save_button"
+        android:onClick="newFile"
+        android:allowUndo="true"
+        android:text="New File" />
+    <!--  We implemented this class, it contains several objects and methods to enable drawing
+    activities, it is the part where user touches and shapes will be appeared
+    -->
+    <com.example.samsung.pixelium.DrawingView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/drawing"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/paint_layout"
+        android:layout_below="@+id/save_button"
+        android:layout_toLeftOf="@+id/paint_layout" />
+<!-- this part will hold the items in the Paint like pencil, brush etc. and there will
+be scroll bar -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right">
+        android:layout_height="match_parent"
+        android:id="@+id/paint_layout"
+        android:paddingTop="40dp"
+        android:paddingLeft="10dp"
+        android:layout_below="@+id/save_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toLeftOf="@+id/color_palette"
+        android:layout_alignLeft="@+id/color_palette"
+        android:layout_alignStart="@+id/color_palette">
 
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/scrollView" />
+            android:layout_width="20dp"
+            android:layout_height="match_parent">
+            <com.example.samsung.pixelium.Tools
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:id="@+id/pencilButton"
+            android:onClick="selectTool"
+            android:text="PENCIL"    />
+            <com.example.samsung.pixelium.Tools
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:id="@+id/brushButton"
+                android:onClick="changeStyle"
+                android:text="BRUSH"    />
+            <com.example.samsung.pixelium.Tools
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:id="@+id/airBrushButton"
+                android:onClick="selectTool"
+                android:text="Air Brush"    />
+            <com.example.samsung.pixelium.Tools
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:id="@+id/FillerButton"
+                android:onClick="selectTool"
+                android:text="Filler"    />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pencil"
-            android:id="@+id/pencil"
-            android:layout_gravity="right"
-            android:clickable="true"
-            android:layout_marginRight="20dp"
-            android:onClick="styleChanges" />
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Brush"
-            android:id="@+id/brush"
-            android:layout_gravity="right"
-            android:clickable="true"
-            android:layout_marginRight="20dp"
-            android:onClick="styleChanges" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Filler"
-            android:id="@+id/Filler"
-            android:clickable="true"
-            android:onClick="styleChanges"/>
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Air Brush"
-            android:id="@+id/AirBrush"
-            android:clickable="true"
-            android:onClick="styleChanges"/>
+        </ScrollView>
     </LinearLayout>
 
-</LinearLayout>
-
-
-
+</RelativeLayout>
